--- a/notebooks_mri/make_PCM_dataset.ipynb
+++ b/notebooks_mri/make_PCM_dataset.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "2d011d8f",
    "metadata": {},
    "outputs": [],
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "942fa6c9",
    "metadata": {},
    "outputs": [],
@@ -321,7 +321,7 @@
     "for region in regions:\n",
     "    conditions = ['lhand', 'rhand', 'lhand', 'rhand']\n",
     "    rois = [f'{region}_R',f'{region}_L', f'{region}_L', f'{region}_R']\n",
-    "    data, cond_vec, part_vec = [], [], []\n",
+    "    data, cond_vec, part_vec, identifier = [], [], [], []\n",
     "    for roi, condition in zip(rois, conditions):\n",
     "        file_path = os.path.join(analysisDir, f'pwbeta_{roi}.npz')\n",
     "        d = np.load(file_path, allow_pickle=True)\n",
@@ -347,6 +347,8 @@
     "            cond_vec.append(np.array(subj_cond))\n",
     "            part_vec.append(subj_part)\n",
     "\n",
+    "    identifier.append(np.repeat(['contra','contra','ipsi','ipsi'], repeats=len(subject)))\n",
+    "\n",
     "    Y = []\n",
     "    for i_sub in range(len(data)):\n",
     "        obs_des = {'cond_vec': cond_vec[i_sub], 'part_vec': part_vec[i_sub]}\n",
@@ -354,7 +356,7 @@
     "\n",
     "    # save PCM dataset (Y):\n",
     "    file_path_save = os.path.join(analysisDir, f'pcm_dataset_6by6_{region}.npz')\n",
-    "    np.savez(file_path_save, Y=Y, cond_vec=cond_vec, part_vec=part_vec, label=labels)\n",
+    "    np.savez(file_path_save, Y=Y, cond_vec=cond_vec, part_vec=part_vec, label=labels, identifier=identifier)\n",
     "\n"
    ]
   },
