--- a/notebooks_mri/make_PCM_dataset.ipynb
+++ b/notebooks_mri/make_PCM_dataset.ipynb
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "942fa6c9",
    "metadata": {},
    "outputs": [],
@@ -321,7 +321,7 @@
     "for region in regions:\n",
     "    conditions = ['lhand', 'rhand', 'lhand', 'rhand']\n",
     "    rois = [f'{region}_R',f'{region}_L', f'{region}_L', f'{region}_R']\n",
-    "    data, cond_vec, part_vec, identifier = [], [], [], []\n",
+    "    data, cond_vec, part_vec, identifier, hemisphere, sn = [], [], [], [], [], []\n",
     "    for roi, condition in zip(rois, conditions):\n",
     "        file_path = os.path.join(analysisDir, f'pwbeta_{roi}.npz')\n",
     "        d = np.load(file_path, allow_pickle=True)\n",
@@ -346,6 +346,8 @@
     "            data.append(Y)\n",
     "            cond_vec.append(np.array(subj_cond))\n",
     "            part_vec.append(subj_part)\n",
+    "            hemisphere.append(roi.split('_')[-1])\n",
+    "            sn.append(subject[i_sub])\n",
     "\n",
     "    identifier.append(np.repeat(['contra','contra','ipsi','ipsi'], repeats=len(subject)))\n",
     "\n",
@@ -356,7 +358,7 @@
     "\n",
     "    # save PCM dataset (Y):\n",
     "    file_path_save = os.path.join(analysisDir, f'pcm_dataset_6by6_{region}.npz')\n",
-    "    np.savez(file_path_save, Y=Y, cond_vec=cond_vec, part_vec=part_vec, label=labels, identifier=identifier)\n",
+    "    np.savez(file_path_save, Y=Y, cond_vec=cond_vec, part_vec=part_vec, label=labels, identifier=identifier, hemisphere=hemisphere, sn=sn)\n",
     "\n"
    ]
   },
@@ -370,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "4aeeea59",
    "metadata": {},
    "outputs": [],
@@ -396,6 +398,7 @@
     "\n",
     "for i_region, region in enumerate(regions):\n",
     "    Y = []\n",
+    "    hemisphere = []\n",
     "    # enumerate hemispheres so we get an integer index for axes\n",
     "    for hem_idx, hem in enumerate(['L','R']):\n",
     "        roi = f'{region}_{hem}'\n",
@@ -425,14 +428,15 @@
     "            data.append(Ytmp)\n",
     "            cond_vec.append(np.array(subj_cond))\n",
     "            part_vec.append(subj_part)\n",
-    "        \n",
+    "            hemisphere.append(hem)\n",
+    "\n",
     "        for i_sub in range(len(data)):\n",
     "            obs_des = {'cond_vec': cond_vec[i_sub], 'part_vec': part_vec[i_sub]}\n",
     "            Y.append(pcm.dataset.Dataset(data[i_sub], obs_descriptors=obs_des))\n",
-    "    \n",
+    "\n",
     "    # save PCM dataset (Y):\n",
     "    file_path_save = os.path.join(analysisDir, f'pcm_dataset_bimanual_{region}.npz')\n",
-    "    np.savez(file_path_save, Y=Y, cond_vec=cond_vec, part_vec=part_vec)\n",
+    "    np.savez(file_path_save, Y=Y, cond_vec=cond_vec, part_vec=part_vec, hemisphere=hemisphere)\n",
     "\n",
     "\n"
    ]
