--- a/notebooks_mri/view_searchlight.ipynb
+++ b/notebooks_mri/view_searchlight.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "id": "a0c22f95",
    "metadata": {},
    "outputs": [],
@@ -76,49 +76,56 @@
       "   :/About   :/BalsaUploadDialog   :/Cursor   :/DingOntology   :/Fonts   :/general_resources.qrc   :/help_resources.qrc   :/HelpFiles   :/LayersPanel   :/MessageDialog   :/PaletteEditorDialog   :/PaletteSettings   :/qpdf   :/qt-project.org   :/RecentFilesDialog   :/SceneFileDialog   :/SpecFileDialog   :/Splash   :/ToolBar   :/update_resources.sh\n",
       "\n",
       "\n",
-      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/FS_LR_32/fs_LR.32k.L.inflated.surf.gii was 0.025486 seconds.\n",
+      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/FS_LR_32/fs_LR.32k.L.inflated.surf.gii was 0.025491 seconds.\n",
       "\n",
       "\n",
-      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/FS_LR_32/fs_LR.32k.R.inflated.surf.gii was 0.02454 seconds.\n",
+      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/FS_LR_32/fs_LR.32k.R.inflated.surf.gii was 0.024695 seconds.\n",
       "\n",
       "\n",
-      "Info: Time to read /Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh/fs_L/fs_LR.32k.LR.sulc.dscalar.nii was 0.023682 seconds.\n",
+      "Info: Time to read /Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh/fs_L/fs_LR.32k.LR.sulc.dscalar.nii was 0.028743 seconds.\n",
       "\n",
       "\n",
-      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/FS_LR_32/ROI.32k.L.label.gii was 0.001131 seconds.\n",
+      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/FS_LR_32/ROI.32k.L.label.gii was 0.000564 seconds.\n",
       "\n",
       "\n",
-      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/FS_LR_32/ROI.32k.R.label.gii was 0.000784 seconds.\n",
+      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/FS_LR_32/ROI.32k.R.label.gii was 0.00075 seconds.\n",
       "\n",
       "\n",
-      "Info: Time to read /Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh/fs_L/fs_LR.32k.L.border was 0.001484 seconds.\n",
+      "Info: Time to read /Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh/fs_L/fs_LR.32k.L.border was 0.001816 seconds.\n",
       "\n",
       "\n",
-      "Info: Time to read /Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh/fs_R/fs_LR.32k.R.border was 0.001559 seconds.\n",
+      "Info: Time to read /Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh/fs_R/fs_LR.32k.R.border was 0.001391 seconds.\n",
       "\n",
       "\n",
-      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/analysis/searchlight/mvpa_rhand_cortex.dscalar.nii was 0.029853 seconds.\n",
+      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/analysis/searchlight/mvpa_rhand_cortex.dscalar.nii was 0.025768 seconds.\n",
       "\n",
       "\n",
-      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/analysis/searchlight/mvpa_lhand_cortex.dscalar.nii was 0.029954 seconds.\n",
+      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/analysis/searchlight/mvpa_lhand_cortex.dscalar.nii was 0.02961 seconds.\n",
       "\n",
       "\n",
-      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/analysis/searchlight/mvpa_bi_cortex.dscalar.nii was 0.031307 seconds.\n",
+      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/analysis/searchlight/mvpa_bi_cortex.dscalar.nii was 0.02483 seconds.\n",
       "\n",
       "\n",
-      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/analysis/searchlight/marginal_rhand_cortex.dscalar.nii was 0.026433 seconds.\n",
+      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/analysis/searchlight/marginal_rhand_cortex.dscalar.nii was 0.028278 seconds.\n",
       "\n",
       "\n",
-      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/analysis/searchlight/marginal_lhand_cortex.dscalar.nii was 0.026348 seconds.\n",
+      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/analysis/searchlight/marginal_lhand_cortex.dscalar.nii was 0.027422 seconds.\n",
       "\n",
       "\n",
-      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/analysis/searchlight/corr_intrinsic_cortex.dscalar.nii was 0.02666 seconds.\n",
+      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/analysis/searchlight/corr_intrinsic_cortex.dscalar.nii was 0.02885 seconds.\n",
       "\n",
       "\n",
-      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/analysis/searchlight/corr_extrinsic_cortex.dscalar.nii was 0.026208 seconds.\n",
+      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/analysis/searchlight/corr_extrinsic_cortex.dscalar.nii was 0.028361 seconds.\n",
       "\n",
-      "2026-01-18 17:03:33.345 wb_view[78344:22554530] TSMSendMessageToUIServer: CFMessagePortSendRequest FAILED(-1) to send to port com.apple.tsm.uiserver\n",
-      "2026-01-18 17:31:41.375 wb_view[78344:22554530] TSMSendMessageToUIServer: CFMessagePortSendRequest FAILED(-1) to send to port com.apple.tsm.uiserver\n"
+      "\n",
+      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/analysis/searchlight/varContra_cortex.dscalar.nii was 0.02908 seconds.\n",
+      "\n",
+      "\n",
+      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/analysis/searchlight/varIpsi_cortex.dscalar.nii was 0.026273 seconds.\n",
+      "\n",
+      "\n",
+      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/analysis/searchlight/varInteraction_cortex.dscalar.nii was 0.034946 seconds.\n",
+      "\n"
      ]
     }
    ],
@@ -127,7 +134,8 @@
     "surfPy_dir = '/Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh'\n",
     "atlas_temp_dir = '/Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/FS_LR_32'\n",
     "\n",
-    "names = ['mvpa_rhand', 'mvpa_lhand', 'mvpa_bi', 'marginal_rhand', 'marginal_lhand','corr_intrinsic', 'corr_extrinsic']\n",
+    "names = ['mvpa_rhand', 'mvpa_lhand', 'mvpa_bi', 'marginal_rhand', 'marginal_lhand','corr_intrinsic', 'corr_extrinsic',\n",
+    "         'varContra', 'varIpsi', 'varInteraction']\n",
     "hem = ['L', 'R']\n",
     "\n",
     "# add paths:\n",
@@ -398,20 +406,23 @@
    "id": "8febd755",
    "metadata": {},
    "source": [
-    "## Concat Hems"
+    "## 1- Concat Hems"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "5009b2f7",
    "metadata": {},
    "outputs": [],
    "source": [
     "glm = 1\n",
     "participants = [101,104,106,107,108,109,110,111,112,113,114,115]\n",
-    "searchlight_names = ['corr_intrinsic','corr_extrinsic', 'mvpa_lhand', 'mvpa_rhand', 'mvpa_bi', 'marginal_lhand', 'marginal_rhand']\n",
-    "    \n",
+    "searchlight_names = ['corr_intrinsic','corr_extrinsic', 'mvpa_lhand', 'mvpa_rhand', 'mvpa_bi', 'marginal_lhand', 'marginal_rhand'\n",
+    "                     ,'varContra', 'varIpsi', 'varInteraction']\n",
+    "distance_names = ['mvpa_lhand', 'mvpa_rhand', 'mvpa_bi', 'marginal_lhand', 'marginal_rhand']\n",
+    "trace_var = {'varContra': 1.0, 'varIpsi': 1.0, 'varInteraction': 0.694444}\n",
+    "\n",
     "borders = {'L': '/Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh/fs_L/fs_LR.32k.L.border',\n",
     "           'R': '/Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh/fs_R/fs_LR.32k.R.border'}\n",
     "\n",
@@ -434,9 +445,14 @@
     "\n",
     "        # Get data\n",
     "        left_data = left_img.get_fdata()\n",
-    "        left_data = np.sign(left_data) * np.sqrt(np.abs(left_data))  # retain sign\n",
     "        right_data = right_img.get_fdata()\n",
-    "        right_data = np.sign(right_data) * np.sqrt(np.abs(right_data))  # retain sign\n",
+    "        # if searchlight_name in distance_names: # transform to Euclidean distance and retain sign\n",
+    "        #     left_data = np.sign(left_data) * np.sqrt(np.abs(left_data))  \n",
+    "        #     right_data = np.sign(right_data) * np.sqrt(np.abs(right_data))\n",
+    "        \n",
+    "        if searchlight_name in ['varContra', 'varIpsi', 'varInteraction']:\n",
+    "            left_data = left_data*trace_var[searchlight_name]\n",
+    "            right_data = right_data*trace_var[searchlight_name]\n",
     "\n",
     "        # Concatenate BrainModelAxis (spatial axis)\n",
     "        combined_brain_axis = left_brain_axis + right_brain_axis\n",
@@ -461,7 +477,7 @@
    "id": "40a056fa",
    "metadata": {},
    "source": [
-    "## Surface Smoothing"
+    "## 2- Surface Smoothing"
    ]
   },
   {
@@ -474,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "id": "7b952720",
    "metadata": {},
    "outputs": [
@@ -516,7 +532,22 @@
       "Data shapes: [(1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984)]\n",
       "Combined scalar axis size: 12\n",
       "Final data shape: (12, 64984)\n",
-      "Successfully created: /Users/aghavamp/Desktop/Projects/bimanual_wrist/analysis/searchlight/marginal_rhand_6mm.dscalar.nii\n"
+      "Successfully created: /Users/aghavamp/Desktop/Projects/bimanual_wrist/analysis/searchlight/marginal_rhand_6mm.dscalar.nii\n",
+      "Concatenating 12 subjects...\n",
+      "Data shapes: [(1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984)]\n",
+      "Combined scalar axis size: 12\n",
+      "Final data shape: (12, 64984)\n",
+      "Successfully created: /Users/aghavamp/Desktop/Projects/bimanual_wrist/analysis/searchlight/varContra_6mm.dscalar.nii\n",
+      "Concatenating 12 subjects...\n",
+      "Data shapes: [(1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984)]\n",
+      "Combined scalar axis size: 12\n",
+      "Final data shape: (12, 64984)\n",
+      "Successfully created: /Users/aghavamp/Desktop/Projects/bimanual_wrist/analysis/searchlight/varIpsi_6mm.dscalar.nii\n",
+      "Concatenating 12 subjects...\n",
+      "Data shapes: [(1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984)]\n",
+      "Combined scalar axis size: 12\n",
+      "Final data shape: (12, 64984)\n",
+      "Successfully created: /Users/aghavamp/Desktop/Projects/bimanual_wrist/analysis/searchlight/varInteraction_6mm.dscalar.nii\n"
      ]
     }
    ],
@@ -526,7 +557,8 @@
     "\n",
     "glm = 1\n",
     "participants = [101,104,106,107,108,109,110,111,112,113,114,115]\n",
-    "searchlight_names = ['corr_intrinsic', 'corr_extrinsic', 'mvpa_lhand', 'mvpa_rhand', 'mvpa_bi', 'marginal_lhand', 'marginal_rhand']\n",
+    "searchlight_names = ['corr_intrinsic', 'corr_extrinsic', 'mvpa_lhand', 'mvpa_rhand', 'mvpa_bi', 'marginal_lhand', 'marginal_rhand'\n",
+    "                    ,'varContra', 'varIpsi', 'varInteraction']\n",
     "\n",
     "fwhm_mm = 6\n",
     "def smooth_cifti(input_cifti, output_cifti, left_surf, right_surf, fwhm_mm):\n",
@@ -602,8 +634,8 @@
     "    nb.save(new_img, os.path.join(baseDir, 'searchlight', f'glm{glm}_{searchlight_name}_cortex_nonsmooth.dscalar.nii'))\n",
     "\n",
     "    if fwhm_mm > 0:\n",
-    "        left_surf = os.path.abspath(os.path.join(atlas_temp_dir, 'fs_LR.32k.L.midthickness.surf.gii'))\n",
-    "        right_surf = os.path.abspath(os.path.join(atlas_temp_dir, 'fs_LR.32k.R.midthickness.surf.gii'))\n",
+    "        left_surf = os.path.abspath(os.path.join(atlasDir, 'fs_LR.32k.L.midthickness.surf.gii'))\n",
+    "        right_surf = os.path.abspath(os.path.join(atlasDir, 'fs_LR.32k.R.midthickness.surf.gii'))\n",
     "        \n",
     "        input_cifti = os.path.abspath(os.path.join(baseDir, 'searchlight', f'glm{glm}_{searchlight_name}_cortex_nonsmooth.dscalar.nii'))\n",
     "        output_cifti = os.path.abspath(os.path.join(analysisDir, 'searchlight', f'{searchlight_name}_{fwhm_mm}mm.dscalar.nii'))\n",
@@ -623,12 +655,12 @@
    "id": "6195d1f9",
    "metadata": {},
    "source": [
-    "## Surface Analysis"
+    "## 3-Surface Analysis"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "ca66579b",
    "metadata": {},
    "outputs": [
@@ -636,10 +668,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/sc/kmc7_9gn2hqd_lrnhdt_2s580000gn/T/ipykernel_26463/848996390.py:18: RuntimeWarning: Mean of empty slice\n",
+      "/var/folders/sc/kmc7_9gn2hqd_lrnhdt_2s580000gn/T/ipykernel_68789/3825603865.py:21: RuntimeWarning: Mean of empty slice\n",
+      "  mean_data = np.nanmean(combined_data_transformed, axis=0, keepdims=True)\n",
+      "/var/folders/sc/kmc7_9gn2hqd_lrnhdt_2s580000gn/T/ipykernel_68789/3825603865.py:38: RuntimeWarning: Mean of empty slice\n",
       "  mean_data = np.nanmean(combined_data, axis=0, keepdims=True)\n",
-      "/var/folders/sc/kmc7_9gn2hqd_lrnhdt_2s580000gn/T/ipykernel_26463/848996390.py:28: RuntimeWarning: Mean of empty slice\n",
-      "  mean_data = np.nanmean(combined_data_transformed, axis=0, keepdims=True)\n"
+      "/var/folders/sc/kmc7_9gn2hqd_lrnhdt_2s580000gn/T/ipykernel_68789/3825603865.py:41: RuntimeWarning: Mean of empty slice\n",
+      "  mean_data_non_transformed = np.nanmean(subject_data_array, axis=0, keepdims=True)\n"
      ]
     }
    ],
@@ -647,7 +681,8 @@
     "fwhm_mm = 6 # to know which file to load\n",
     "glm = 1\n",
     "participants = [101,104,106,107,108,109,110,111,112,113,114,115]\n",
-    "searchlight_names = ['corr_intrinsic', 'corr_extrinsic', 'mvpa_lhand', 'mvpa_rhand', 'mvpa_bi', 'marginal_lhand', 'marginal_rhand']\n",
+    "searchlight_names = ['corr_intrinsic', 'corr_extrinsic', 'mvpa_lhand', 'mvpa_rhand', 'mvpa_bi', 'marginal_lhand', 'marginal_rhand',\n",
+    "                     'varContra', 'varIpsi', 'varInteraction']\n",
     "\n",
     "for searchlight_name in searchlight_names: \n",
     "    # Load the smooth cifti file:\n",
@@ -656,24 +691,16 @@
     "    subject_data_array = cifti.get_fdata()\n",
     "    scalar_axis = cifti.header.get_axis(0)\n",
     "    combined_axis = cifti.header.get_axis(1)\n",
-    "    \n",
-    "    # Concatenate data along axis 0 (scalar dimension)\n",
-    "    combined_data = subject_data_array\n",
-    "\n",
-    "    # Mean Across Subjects:\n",
-    "    mean_data = np.nanmean(combined_data, axis=0, keepdims=True)\n",
-    "    # tstats:\n",
-    "    std_data = np.nanstd(combined_data, axis=0, keepdims=True, ddof=1)\n",
-    "    DoF = np.sum(~np.isnan(combined_data), axis=0, keepdims=True) - 1  # Degrees of freedom\n",
-    "    tstats = mean_data / (std_data / np.sqrt(DoF+1))\n",
-    "    tstats[~np.isfinite(tstats)] = np.nan # handle voxels with no data\n",
     "\n",
     "    if searchlight_name == 'corr_intrinsic' or searchlight_name == 'corr_extrinsic':\n",
+    "        # Concatenate data along axis 0 (scalar dimension)\n",
+    "        combined_data = subject_data_array\n",
+    "        \n",
     "        # fissure z-transform each subject's r:\n",
     "        combined_data_transformed = np.arctanh(combined_data)\n",
     "        mean_data = np.nanmean(combined_data_transformed, axis=0, keepdims=True)\n",
-    "\n",
-    "        # tstats:\n",
+    "        \n",
+    "        # tstats on arctanh values:\n",
     "        std_data = np.nanstd(combined_data_transformed, axis=0, keepdims=True, ddof=1)\n",
     "        DoF = np.sum(~np.isnan(combined_data_transformed), axis=0, keepdims=True) - 1  # Degrees of freedom\n",
     "        tstats = mean_data / (std_data / np.sqrt(DoF+1))\n",
@@ -681,17 +708,32 @@
     "\n",
     "        # transform back to r:\n",
     "        mean_data = np.tanh(mean_data)\n",
-    "\n",
+    "    else:\n",
+    "        # combined_data with transformation:\n",
+    "        combined_data = subject_data_array\n",
+    "        for i in range(len(subject_data_array)):\n",
+    "            combined_data[i, :] = np.sign(combined_data[i, :]) * np.sqrt(np.abs(combined_data[i, :]))\n",
+    "        \n",
+    "        # Mean Across Subjects:\n",
+    "        mean_data = np.nanmean(combined_data, axis=0, keepdims=True)\n",
+    "        \n",
+    "        # tstats on squared distance (variances) not transformed values:\n",
+    "        mean_data_non_transformed = np.nanmean(subject_data_array, axis=0, keepdims=True)\n",
+    "        std_data = np.nanstd(subject_data_array, axis=0, keepdims=True, ddof=1)\n",
+    "        DoF = np.sum(~np.isnan(subject_data_array), axis=0, keepdims=True) - 1  # Degrees of freedom\n",
+    "        tstats = mean_data_non_transformed / (std_data / np.sqrt(DoF+1))\n",
+    "        tstats[~np.isfinite(tstats)] = np.nan # handle voxels with no data\n",
+    "    \n",
     "    # significant mask for one-sided t-test, DOF = 11:\n",
     "    p05_mask = np.abs(tstats) >= 1.796\n",
     "    mean_data_p05 = mean_data * p05_mask\n",
-    "\n",
+    "    \n",
     "    p01_mask = np.abs(tstats) >= 2.719\n",
     "    mean_data_p01 = mean_data * p01_mask\n",
     "\n",
     "    p001_mask = np.abs(tstats) >= 4.024\n",
     "    mean_data_p001 = mean_data * p001_mask\n",
-    "\n",
+    "    \n",
     "    # add to the data:\n",
     "    combined_data = np.concatenate([combined_data, mean_data, mean_data_p05, mean_data_p01, mean_data_p001, tstats, DoF], axis=0)\n",
     "    # update the scalar axis:\n",
@@ -708,7 +750,6 @@
     "    \n",
     "    # Save\n",
     "    nb.save(cifti_img, os.path.join(analysisDir, 'searchlight', f'{searchlight_name}_cortex.dscalar.nii'))\n",
-    "\n",
     "\n"
    ]
   }
