--- a/notebooks_mri/view_searchlight.ipynb
+++ b/notebooks_mri/view_searchlight.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "id": "a0c22f95",
    "metadata": {},
    "outputs": [],
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "41d00b08",
    "metadata": {},
    "outputs": [
@@ -76,57 +76,67 @@
       "   :/About   :/BalsaUploadDialog   :/Cursor   :/DingOntology   :/Fonts   :/general_resources.qrc   :/help_resources.qrc   :/HelpFiles   :/LayersPanel   :/MessageDialog   :/PaletteEditorDialog   :/PaletteSettings   :/qpdf   :/qt-project.org   :/RecentFilesDialog   :/SceneFileDialog   :/SpecFileDialog   :/Splash   :/ToolBar   :/update_resources.sh\n",
       "\n",
       "\n",
-      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/FS_LR_32/fs_LR.32k.L.inflated.surf.gii was 0.025491 seconds.\n",
+      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/FS_LR_32/fs_LR.32k.L.inflated.surf.gii was 0.025361 seconds.\n",
       "\n",
       "\n",
-      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/FS_LR_32/fs_LR.32k.R.inflated.surf.gii was 0.024695 seconds.\n",
+      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/FS_LR_32/fs_LR.32k.R.inflated.surf.gii was 0.024509 seconds.\n",
       "\n",
       "\n",
-      "Info: Time to read /Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh/fs_L/fs_LR.32k.LR.sulc.dscalar.nii was 0.028743 seconds.\n",
+      "Info: Time to read /Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh/fs_L/fs_LR.32k.LR.sulc.dscalar.nii was 0.028841 seconds.\n",
       "\n",
       "\n",
-      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/FS_LR_32/ROI.32k.L.label.gii was 0.000564 seconds.\n",
+      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/FS_LR_32/ROI.32k.L.label.gii was 0.001194 seconds.\n",
       "\n",
       "\n",
-      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/FS_LR_32/ROI.32k.R.label.gii was 0.00075 seconds.\n",
+      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/FS_LR_32/ROI.32k.R.label.gii was 0.000895 seconds.\n",
       "\n",
       "\n",
-      "Info: Time to read /Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh/fs_L/fs_LR.32k.L.border was 0.001816 seconds.\n",
+      "Info: Time to read /Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh/fs_L/fs_LR.32k.L.border was 0.00148 seconds.\n",
       "\n",
       "\n",
-      "Info: Time to read /Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh/fs_R/fs_LR.32k.R.border was 0.001391 seconds.\n",
+      "Info: Time to read /Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh/fs_R/fs_LR.32k.R.border was 0.001548 seconds.\n",
       "\n",
       "\n",
-      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/analysis/searchlight/mvpa_rhand_cortex.dscalar.nii was 0.025768 seconds.\n",
+      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/analysis/searchlight/mvpa_rhand_cortex.dscalar.nii was 0.02832 seconds.\n",
       "\n",
       "\n",
-      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/analysis/searchlight/mvpa_lhand_cortex.dscalar.nii was 0.02961 seconds.\n",
+      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/analysis/searchlight/mvpa_lhand_cortex.dscalar.nii was 0.031799 seconds.\n",
       "\n",
       "\n",
-      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/analysis/searchlight/mvpa_bi_cortex.dscalar.nii was 0.02483 seconds.\n",
+      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/analysis/searchlight/mvpa_bi_cortex.dscalar.nii was 0.02869 seconds.\n",
       "\n",
       "\n",
-      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/analysis/searchlight/marginal_rhand_cortex.dscalar.nii was 0.028278 seconds.\n",
+      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/analysis/searchlight/marginal_rhand_cortex.dscalar.nii was 0.028227 seconds.\n",
       "\n",
       "\n",
-      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/analysis/searchlight/marginal_lhand_cortex.dscalar.nii was 0.027422 seconds.\n",
+      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/analysis/searchlight/marginal_lhand_cortex.dscalar.nii was 0.028235 seconds.\n",
       "\n",
       "\n",
-      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/analysis/searchlight/corr_intrinsic_cortex.dscalar.nii was 0.02885 seconds.\n",
+      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/analysis/searchlight/corr_intrinsic_cortex.dscalar.nii was 0.02784 seconds.\n",
       "\n",
       "\n",
-      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/analysis/searchlight/corr_extrinsic_cortex.dscalar.nii was 0.028361 seconds.\n",
+      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/analysis/searchlight/corr_extrinsic_cortex.dscalar.nii was 0.028341 seconds.\n",
       "\n",
       "\n",
-      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/analysis/searchlight/varContra_cortex.dscalar.nii was 0.02908 seconds.\n",
+      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/analysis/searchlight/varContra_cortex.dscalar.nii was 0.027917 seconds.\n",
       "\n",
       "\n",
-      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/analysis/searchlight/varIpsi_cortex.dscalar.nii was 0.026273 seconds.\n",
+      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/analysis/searchlight/varIpsi_cortex.dscalar.nii was 0.027092 seconds.\n",
       "\n",
       "\n",
-      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/analysis/searchlight/varInteraction_cortex.dscalar.nii was 0.034946 seconds.\n",
+      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/analysis/searchlight/varInteraction_cortex.dscalar.nii was 0.027051 seconds.\n",
       "\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "CompletedProcess(args=['wb_view', '/Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/FS_LR_32/fs_LR.32k.L.inflated.surf.gii', '/Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/FS_LR_32/fs_LR.32k.R.inflated.surf.gii', '/Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh/fs_L/fs_LR.32k.LR.sulc.dscalar.nii', '/Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/FS_LR_32/ROI.32k.L.label.gii', '/Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/FS_LR_32/ROI.32k.R.label.gii', '/Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh/fs_L/fs_LR.32k.L.border', '/Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh/fs_R/fs_LR.32k.R.border', '/Users/aghavamp/Desktop/Projects/bimanual_wrist/analysis/searchlight/mvpa_rhand_cortex.dscalar.nii', '/Users/aghavamp/Desktop/Projects/bimanual_wrist/analysis/searchlight/mvpa_lhand_cortex.dscalar.nii', '/Users/aghavamp/Desktop/Projects/bimanual_wrist/analysis/searchlight/mvpa_bi_cortex.dscalar.nii', '/Users/aghavamp/Desktop/Projects/bimanual_wrist/analysis/searchlight/marginal_rhand_cortex.dscalar.nii', '/Users/aghavamp/Desktop/Projects/bimanual_wrist/analysis/searchlight/marginal_lhand_cortex.dscalar.nii', '/Users/aghavamp/Desktop/Projects/bimanual_wrist/analysis/searchlight/corr_intrinsic_cortex.dscalar.nii', '/Users/aghavamp/Desktop/Projects/bimanual_wrist/analysis/searchlight/corr_extrinsic_cortex.dscalar.nii', '/Users/aghavamp/Desktop/Projects/bimanual_wrist/analysis/searchlight/varContra_cortex.dscalar.nii', '/Users/aghavamp/Desktop/Projects/bimanual_wrist/analysis/searchlight/varIpsi_cortex.dscalar.nii', '/Users/aghavamp/Desktop/Projects/bimanual_wrist/analysis/searchlight/varInteraction_cortex.dscalar.nii'], returncode=0)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -411,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "5009b2f7",
    "metadata": {},
    "outputs": [],
@@ -437,7 +447,7 @@
     "        \n",
     "        left_brain_axis = left_img.header.get_axis(1)  # BrainModelAxis (spatial)\n",
     "        right_brain_axis = right_img.header.get_axis(1)  # BrainModelAxis (spatial)\n",
-    "        \n",
+    "\n",
     "        # Verify scalar axes are compatible (same number of scalars/maps)\n",
     "        if left_scalar_axis != right_scalar_axis:\n",
     "            print(\"Warning: ScalarAxis differ between hemispheres\")\n",
@@ -490,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 31,
    "id": "7b952720",
    "metadata": {},
    "outputs": [
@@ -660,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "ca66579b",
    "metadata": {},
    "outputs": [
@@ -670,6 +680,8 @@
      "text": [
       "/var/folders/sc/kmc7_9gn2hqd_lrnhdt_2s580000gn/T/ipykernel_68789/3825603865.py:21: RuntimeWarning: Mean of empty slice\n",
       "  mean_data = np.nanmean(combined_data_transformed, axis=0, keepdims=True)\n",
+      "/Users/aghavamp/Desktop/Projects/bimanual_wrist/.conda/lib/python3.11/site-packages/numpy/lib/_nanfunctions_impl.py:2019: RuntimeWarning: Degrees of freedom <= 0 for slice.\n",
+      "  var = nanvar(a, axis=axis, dtype=dtype, out=out, ddof=ddof,\n",
       "/var/folders/sc/kmc7_9gn2hqd_lrnhdt_2s580000gn/T/ipykernel_68789/3825603865.py:38: RuntimeWarning: Mean of empty slice\n",
       "  mean_data = np.nanmean(combined_data, axis=0, keepdims=True)\n",
       "/var/folders/sc/kmc7_9gn2hqd_lrnhdt_2s580000gn/T/ipykernel_68789/3825603865.py:41: RuntimeWarning: Mean of empty slice\n",
